<resources>
	<string name="yes">Yes</string>
	<string name="no">no</string>
	<string name="page">page</string>
	<string name="of">of</string>
	<string name="login_to_your_account">Login to your account</string>
	<string name="requesting_reset_password">Requesting a reset code to reset password</string>
	<string name="requesting_reset_password_error">There was an error requesting password code:
	</string>
	<string name="requesting_reset_password_success">The system has sent you a code to reset your
		password</string>
	<string name="enter_email">Enter your email and a reset code will be sent to
		your email."</string>
	<string name="GPS">GPS</string>
	<string name="MobileNetwork">Mobile Network</string>
	<string name="password_recovery">Password Recovery</string>
	<string name="request_password_recovery">Request password recovery</string>
	<string name="request_password_reset">Request password reset</string>
	<string name="reset_code">Reset code</string>
	<string name="already_have_account">Already have an account?</string>
	<string name="create_account">Create account</string>
	<string name="understood_tc">I have read and understood the terms and conditions
		LINK</string>
	<string name="terms_and_condition_title">Privacy Notice &amp; Terms and Conditions</string>
	<string name="reset_data_cap_question">Do you wish to reset the data usage manually for
		this month?</string>
	<string name="max_data_cap_message">Maximum amount limited to </string>
	<string name="min_data_cap_message">Minimum amount limited to </string>
	<string name="set_default">Set Default</string>
	<string name="activation_needed">The application needs to be activated</string>
	<string name="version">Version </string>
	<string name="welcome">Welcome</string>
	<string name="welcome_intro"> ( Welcome message, Privacy Notice and Terms &amp;
		Conditions to be placed here )</string>
	<string name="continue_text">Next</string>
	<string name="agree">Agree</string>
	<string name="activating_complete">Activating complete</string>
	<string name="download_complete">Download complete</string>
	<string name="lost_password">Lost your password?</string>
	<string name="dont_have_account">Need an account?</string>
	<string name="password_reset_dialog">The system is resetting your password</string>
	<string name="reset_password_success">Your password has been reset</string>
	<string name="reset_password_error">There was an error resetting your password:
	</string>
	<string name="logout_question">Do you want to logout?</string>
	<string name="time_period_1week">1 Week</string>
	<string name="time_period_2week">2 Weeks</string>
	<string name="time_period_1month">1 Month</string>
	<string name="time_period_3months">3 Months</string>
	<string name="time_period_1year">1 Year</string>
	<string name="accept_terms">Please tick checkbox to confirm Terms and
		Conditions</string>
	<string name="none">none</string>
	<string name="none_unknown">None or unknown</string>
	<string name="enabled">Enabled</string>
	<string name="disabled">Disabled</string>
	<string name="true_string">True</string>
	<string name="false_string">False</string>
	<string name="executing_now">Executing now</string>
	<string name="mobile">mobile</string>
	<string name="wifi">WiFi</string>
	<string name="app_name">Network Performance (Beta)</string>
	<string name="activity_logs_name">SamKnows Logs</string>
	<string name="activity_info_name">SamKnows Info</string>
	<string name="activity_run_test_name">SamKnows Test Executor</string>
	<string name="activity_test_results_name">Test Results</string>
	<string name="activity_pref_name">Settings</string>
	<string name="activity_initial_settings_name">Data Cap</string>
	<string name="ntf_title">SamKnows</string>
	<string name="ntf_checking_conditions">Checking test conditions</string>
	<string name="ntf_running_test">Running test: </string>
	<string name="device">Device</string>
	<string name="sk_service_info">SamKnows Service Info</string>
	<string name="activated">Activated</string>
	<string name="auto_testing">Auto Testing</string>
	<string name="next_service_task">Next Service Task</string>
	<string name="next_test_scheduled_for">Next Test</string>
	<string name="unit_id">Unit ID</string>
	<string name="phone_info">Phone Info</string>
	<string name="imei">IMEI</string>
	<string name="imsi">IMSI</string>
	<string name="phone">Phone</string>
	<string name="os">OS</string>
	<string name="network_info">Network Info</string>
	<string name="phone_type">Phone Type</string>
	<string name="network_type">Network Type</string>
	<string name="network_operator">Network Operator</string>
	<string name="is_roaming">Is Roaming</string>
	<string name="last_known_location_info">Last Known Location Info</string>
	<string name="date">Date</string>
	<string name="provider">Provider</string>
	<string name="longitude">Longitude</string>
	<string name="latitude">Latitude</string>
	<string name="accuracy">Accuracy</string>
	<string name="cell_tower_info">Current Cell Tower</string>
	<string name="type">Type</string>
	<string name="cell_id">Cell ID</string>
	<string name="area_code">Area Code</string>
	<string name="signal_strength">Signal Strength</string>
	<string name="connected">Connected</string>
	<string name="connectivity_type">Connectivity Type</string>
	<string name="cell_tower_id">Cell Tower ID</string>
	<string name="cell_tower_area_location_code">Cell Tower Area Location Code</string>
	<string name="location_provider">Location Provider</string>
	<string name="sim_operator_code">Sim Operator Code</string>
	<string name="sim_operator_name">Sim Operator Name</string>
	<string name="manufacturer">Manufacturer</string>
	<string name="model">Model</string>
	<string name="os_version">OS version</string>
	<string name="gsmbiterrorrate">GSM Bit Error Rate</string>
	<string name="cdmaecio">CDMA ECIO</string>
	<string name="active_network_type">Active network type</string>
	<string name="connection_status">Connection status</string>
	<string name="roaming_status">Roaming status</string>
	<string name="network_operator_code">Network operator code</string>
	<string name="cdma_base_station_strength">CDMA base station strength</string>
	<string name="cdma_base_station_id">CDMA base station ID</string>
	<string name="cmda_base_station_latitude">CDMA base station latitude</string>
	<string name="cdma_base_station_longitude">CDMA base station longitude</string>
	<string name="cdma_network_id">CDMA network ID</string>
	<string name="cdma_system_id">CDMA system ID</string>
	<string name="bearer">Bearer</string>
	<string name="submitted_logs">submitted logs</string>
	<string name="not_submitted_logs">not submitted logs</string>
	<string name="next">next</string>
	<string name="system_info">System Info</string>
	<string name="test_results">Test Results</string>
	<string name="menu_terms_and_condition">Terms of Use</string>
	<string name="logs">Logs</string>
	<string name="stats">Stats</string>
	<string name="available_tests">Available Tests</string>
	<string name="all">All</string>
	<string name="result">Result</string>
	<string name="activation">Refresh config</string>
	<string name="run_now">Run now</string>
	<string name="preparing_samknows_tests">Preparing Samknows Tests...</string>
	<string name="failed">Failed</string>
	<string name="try_again">Try Again</string>
	<string name="enable_now">Enable Now</string>
	<string name="loading_please_wait">Loading. Please wait...</string>
	<string name="title">Title</string>
	<string name="active_connection">Active Connection: </string>
	<string name="downloaded">Downloaded: </string>
	<string name="uploaded">Uploaded: </string>
	<string name="cpu_usage">CPU usage: </string>
	<string name="summary">Summary</string>
	<string name="raw_result_data">Raw Result Data</string>
	<string name="loading_config">Loading config from server...</string>
	<string name="failed_to_load_config">Failed to load config!</string>
	<string name="manual_test_error">Unable to run manual test!</string>
	<string name="enable_service_question">Do you want to enable mobile testing?</string>
	<string name="cancel_test_question">Do you want to cancel running test?</string>
	<string name="ok">ok</string>
	<string name="ok_dialog">OK</string>
	<string name="no_dialog">No</string>
	<string name="time">Time</string>
	<string name="target">Target</string>
	<string name="speed">Speed</string>
	<string name="latency">Latency</string>
	<string name="p_loss">Packet loss</string>
	<string name="jitter">Jitter</string>
	<string name="download">Download</string>
	<string name="upload">Upload</string>
	<string name="download_mbps">Download</string>
	<string name="upload_mbps">Upload</string>
	<string name="latency_ms">Latency</string>
	<string name="loss_percent">Packet Loss</string>
	<string name="browsing">Browsing</string>
	<string name="jitter_ms">Jitter</string>
	<string name="latest">Latest</string>
	<string name="average">Average</string>
	<string name="average_results">Average Results</string>
	<string name="average_results_title">Average Results</string>
	<string name="archive_result">Archived Result</string>
	<string name="choose_test">Choose Test?</string>
	<string name="server">Server</string>
	<string name="paper_clip">Paper Clip</string>
	<string name="page_turn">Page Turn</string>
	<string name="alert_icon">Alert Icon</string>
	<string name="week">1 Wk</string>
	<string name="month">1 Mth</string>
	<string name="month3">3 Mth</string>
	<string name="month6">6 Mth</string>
	<string name="year">1 Yr</string>
	<string name="updated">Updated</string>
	<string name="about">About</string>
	<string name="terms_of_use_title">Privacy &amp; Terms of Use</string>
	<string name="settings">Settings</string>
	<string name="username">Email address</string>
	<string name="password">Password</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="login">Login</string>
	<string name="register">Create Account</string>
	<string name="create_user">Create user</string>
	<string name="cancel">Cancel</string>
	<string name="login_incorrect">Login credentials incorrect.</string>
	<string name="error_on_registering">Ops... An error occurred: </string>
	<string name="logging_in">Logging in. Please wait...</string>
	<string name="registering_in">Registering. Please wait...</string>
	<string name="loading">Loading data. Hang on...</string>
	<string name="mobile_testing_disabled">Mobile testing disabled.</string>
	<string name="refresh">Refresh</string>
	<string name="empty_username_error">Username can\'t be empty!</string>
	<string name="empty_password_error">Password can\'t be empty!</string>
	<string name="empty_code_error">Code can\'t be empty!</string>
	<string name="passwords_do_not_match">Passwords do not match!</string>
	<string name="about_download">This should be indicative of the maximum speed your
		broadband connection will be able to download data from the Internet.
		Results are recorded in Mbps (higher is better).</string>
	<string name="reset_password">Reset Password</string>
	<string name="line_break">Line Break</string>
	<string name="init_settings_title">Data Consumption</string>
	<string name="data_cap_input_text">Please choose the amount of data (in MB) the Application should use each month:</string>
	<string name="data_cap_explanation">By default the Application is configured to use no more than 100 megabytes of data each month.  Any tests you initiate will also consume between 100 KB for the smallest packet loss test and 30 MB for a complete suite of tests.  At any time you can change the amount of data the Application uses by increasing or reducing the \"Mobile data cap\" in the settings menu.  You should ensure that your monthly broadband usage, including the data used by the Application and Service during the Program, does not exceed the data allowance included in your mobile broadband package.  Your carrier may charge you for any data used in excess of your package\'s data allowance.</string>
</resources>