<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/RelativeLayout1" style="@style/background"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:gravity="center_horizontal" android:orientation="vertical">

	<LinearLayout android:id="@+id/LinearLayout1"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:layout_alignParentLeft="true" android:layout_alignParentTop="true"
		android:layout_marginBottom="10dp" android:layout_marginLeft="10dp"
		android:layout_marginRight="10dp" android:layout_marginTop="10dp"
		android:background="#ffffff" android:orientation="vertical"
		android:paddingBottom="30dp" android:paddingTop="10dp">

		<TextView android:id="@+id/init_settings_title" style="@style/h1"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
			android:padding="10dp" android:text="@string/init_settings_title" />
          <ScrollView
            android:id="@+id/webscrollview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
		<TextView style="@style/normal" android:layout_width="wrap_content"
			android:paddingLeft="10dp" android:text="@string/data_cap_input_text" />

		<EditText android:id="@+id/data_cap_init_input"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
			android:background="@drawable/input_background" android:hint="@string/data_cap_input_text"
			android:inputType="number" android:paddingLeft="13dip"
			android:layout_marginBottom="10dp" android:layout_marginTop="10dp"
			android:paddingRight="13dip" android:textColor="#B0B0B0"
			android:textSize="13sp" />
		
		<TextView style="@style/normal" android:layout_width="wrap_content"
			android:paddingLeft="10dp" android:text="@string/data_cap_explanation"
			android:layout_marginBottom="10dp" />
		
		 <ImageView
                    android:id="@+id/ImageView03"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:baselineAlignBottom="false"
                    android:contentDescription="@string/line_break"
                    android:cropToPadding="false"
                    android:scaleType="fitXY"
                    android:src="@drawable/pagedrop" />

		<Button android:id="@+id/btn_continue" style="@style/Button"
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
			android:drawableRight="@drawable/icon_right" android:gravity="left|center_vertical"
			android:text="@string/continue_text" android:textColor="#000000" />
		</LinearLayout>
 </ScrollView>
	</LinearLayout>

	<ImageView android:id="@+id/imageView1"
		android:contentDescription="@string/paper_clip" android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true" android:src="@drawable/clip_shadow_small" />

</RelativeLayout>