<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_clipboard"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/TextView02"
            style="@style/h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:padding="10dp"
            android:text="@string/reset_password" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/input_background"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingLeft="13dip"
            android:paddingRight="13dip"
            android:textColor="#B0B0B0"
            android:textSize="13sp" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/resetcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/input_background"
            android:hint="@string/reset_code"
            android:inputType="textEmailAddress"
            android:paddingLeft="13dip"
            android:paddingRight="13dip"
            android:textColor="#B0B0B0"
            android:textSize="13sp" >

        </EditText>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/input_background"
            android:hint="@string/password"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:password="true"
            android:textColor="#B0B0B0"
            android:textSize="13sp" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dip"
            android:background="@drawable/input_background"
            android:hint="@string/confirm_password"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:password="true"
            android:textColor="#B0B0B0"
            android:textSize="13sp" />

        <Button
            android:id="@+id/btn_reset_password"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableRight="@drawable/icon_right"
            android:gravity="left|center_vertical"
            android:text="@string/reset_password"
            android:textColor="#000000" />

        <ImageView
            android:id="@+id/ImageView03"
            android:contentDescription="@string/line_break"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:baselineAlignBottom="false"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            android:src="@drawable/pagedrop" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/paper_clip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/clip_shadow_small" />

</RelativeLayout>